# antroji_uzduotis

./: CMakeLists.txt  README.md  duomenys.cpp  duomenys.h  ivedimas.cpp  ivedimas.h  kietiakai.txt  main.cpp  rezultatas.cpp  rezultatas.h  rikiavimas.cpp  rikiavimas.h  studentas.h  tests.cpp  vargsiukai.txt
1_strategija/List/: duomenys.h  ivedimas.cpp  main.cpp  rezultatas.cpp  rikiavimas.cpp
1_strategija/Vector/: duomenys.cpp  rezultatas.cpp
2_strategija/List/: duomenys.cpp  duomenys.h  main.cpp
2_strategija/Vector/: duomenys.cpp  duomenys.h  ivedimas.cpp  kietiakai.txt  main.cpp  studentai_1000.txt  studentai_10000.txt  studentai_100000.txt
3_strategija/List/: duomenys.cpp  ivedimas.cpp  main.cpp  rezultatas.cpp  studentas.cpp  studentas.h  zmogus.h
3_strategija/Vector/: duomenys.cpp  duomenys.h  main.cpp  rikiavimas.cpp
